  The syntax of old-style theories has not changed.

* Provers/quasi.ML:  new transitivity reasoners for transitivity only
  and quasi orders.

* Provers/trancl.ML:  new transitivity reasoner for transitive and
  reflexive-transitive closure of relations.

* Provers/blast.ML:  new reference depth_limit to make blast's depth
  limit (previously hard-coded with a value of 20) user-definable.

* Pure: considerably improved version of 'constdefs' command.  Now
  performs automatic type-inference of declared constants; additional
  support for local structure declarations (cf. locales and HOL
  records), see also isar-ref manual.  Potential INCOMPATIBILITY: need
  to observe strictly sequential dependencies of definitions within a
  single 'constdefs' section; moreover, the declared name needs to be
  an identifier.  If all fails, consider to fall back on 'consts' and
  'defs' separately.

* Pure: improved indexed syntax and implicit structures.  First of
  all, indexed syntax provides a notational device for subscripted
  application, using the new syntax \<^bsub>term\<^esub> for arbitrary
  expressions.  Secondly, in a local context with structure
  declarations, number indexes \<^sub>n or the empty index (default
  number 1) refer to a certain fixed variable implicitly; option
  show_structs controls printing of implicit structures.  Typical
  applications of these concepts involve record types and locales.

* Pure: clear separation of logical types and nonterminals, where the
  latter may only occur in 'syntax' specifications or type
  abbreviations.  Before that distinction was only partially
  implemented via type class "logic" vs. "{}".  Potential
  INCOMPATIBILITY in rare cases of improper use of 'types'/'consts'
  instead of 'nonterminals'/'syntax'.  Some very exotic syntax
  specifications may require further adaption (e.g. Cube/Base.thy).

* Pure: removed obsolete type class "logic", use the top sort {}